<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.robotapp.PinControl" >

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textdivider"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:columnCount="4"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/ArduinoPin4"
            android:background="@drawable/button_bg"
            android:textOff="4"
            android:textOn="4"
            android:onClick="pinToggleButtonClick" />

        <ToggleButton
            android:id="@+id/ArduinoPin5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:textOff="5"
            android:textOn="5"
            android:onClick="pinToggleButtonClick" />

        <ToggleButton
            android:id="@+id/ArduinoPin6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:textOff="6"
            android:textOn="6"
            android:onClick="pinToggleButtonClick" />

        <ToggleButton
            android:id="@+id/ArduinoPin7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:textOff="7"
            android:textOn="7"
            android:onClick="pinToggleButtonClick" />

        <ToggleButton
            android:id="@+id/ArduinoPin8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:textOff="8"
            android:textOn="8"
            android:onClick="pinToggleButtonClick" />

        <ToggleButton
            android:id="@+id/ArduinoPin11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:textOff="11"
            android:textOn="11"
            android:onClick="pinToggleButtonClick" />

        <ToggleButton
            android:id="@+id/ArduinoPin12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:textOff="12"
            android:textOn="12"
            android:onClick="pinToggleButtonClick" />

        <ToggleButton
            android:id="@+id/ArduinoPin13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:textOff="13"
            android:textOn="13"
            android:onClick="pinToggleButtonClick" />
    </GridLayout>

    <TextView
        android:id="@+id/textdivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gridLayout1"
        android:layout_alignParentTop="true"
        android:text="@string/toggle_pins_on_off"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/gridLayout1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/gridLayout1"
        android:layout_marginTop="18dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <SeekBar
            android:id="@+id/pin11SeekBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="127" />

        <SeekBar
            android:id="@+id/pin6SeekBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="127" />

        <SeekBar
            android:id="@+id/pin5SeekBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="127" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/divider"
        android:layout_below="@+id/divider"
        android:text="@string/analogwrite_from_0_255"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/linearLayout1"
        android:layout_marginTop="14dp"
        android:text="@string/pin_11_label" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp"
        android:text="@string/pin_6_label" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout1"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/pin_5_label" />

</RelativeLayout>